# dynamic-rate-calculation

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  pyproject.toml
api/app/: __init__.py  main.py
api/app/application/: __init__.py
api/app/application/dtos/: __init__.py  base.py  insurance.py
api/app/application/use_cases/: __init__.py  base.py  calculate_insurance.py  delete_calculation.py  get_calculation.py  list_calculations.py  update_calculation.py
api/app/config/: __init__.py  api.py  base.py  database.py  logging.py  redis.py  settings.py
api/app/domain/: __init__.py  exceptions.py
api/app/domain/entities/: __init__.py  car.py  insurance_calculation.py
api/app/domain/interfaces/: __init__.py  config.py  insurance_service.py  repository.py
api/app/domain/services/: __init__.py  insurance_calculator.py
api/app/domain/value_objects/: __init__.py  address.py  base.py  car_info.py  insurance_result.py  money.py  percentage.py
api/app/infrastructure/: __init__.py  cache.py  database.py
api/app/infrastructure/repositories/: __init__.py  base.py  insurance_repository.py  mysql_repository.py  redis_repository.py
api/app/infrastructure/services/: insurance_service.py  (+1 more)
api/app/middleware/: __init__.py  logging.py
api/app/presentation/: __init__.py
api/app/tests/: __init__.py  conftest.py  test_api.py  test_insurance_calculations.py  test_insurance_calculator.py
api/config/: insurance-config.json  local-production.json  redis_commander.json
(+20 files in other folders)
